Fix form alignments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -492,6 +492,9 @@ input:required:valid {
 .menu-list li a:focus {
     text-decoration: none;
 }
+/**/.menu-list li[aria-expanded="true"]{
+  background-color: #B6A754;
+}/**/
 
 @media(min-width: 1024px){
   #nav-side-bar li{
